--- a/node_app/package.json
+++ b/node_app/package.json
@@ -10,6 +10,8 @@
   "author": "Raghunath",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonschema": "^1.2.4"
   }
 }
